# bai

./: .gitignore  Caddyfile  Dockerfile  bar_cache.sqlite  caddy-docker.yml  docker-compose.yml  pyproject.toml  readme.md  short_cache.sqlite
.github/workflows/: docker-image.yml
data/: BIG_DOLFY.csv  Dankest.csv  Dave[tB].csv  Daymus.csv  ElmerFudd.csv  Fatalebaguette.csv  Flash.csv  HellsHound.csv  Lostdeadman.csv  MAdka.csv  MSPR.csv  Malady.csv  MomsBoyToy.csv  PathOfBFR.csv  Raghna.csv  Raikoh.csv  SadPanda.csv  Skymirrh[BAB]Lob.csv  Snoopa.csv  XFactorLive.csv  Zerpiederp.csv  [8D].csv  [CMG]Operator.csv  [Fx]ShoX.csv  [KoN]VodKa.csv  [LOB]Choice.csv  [TZN]Clyret.csv  goopy.csv  oli2k00.csv  starcraftman.csv
notebooks/: bar_cache.sqlite  bar_eda.ipynb  battle.ipynb  battle.json  battle_players.csv  battle_players.json  battles.csv  data.json  library.ipynb  matches_details_df.csv  short_cache.sqlite
src/: app.py  requirements.txt
src/app/: app.py  bai.py  main.py
src/bai/: bai.py
